snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.153923-2.pom.sha1
4f6a43629ba3eb4d702fca94ec62e6840c4533bb